# coin-echange-backend

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  deploy.sh  deployments.tar.enc  setup.cfg
src/: manage.py
src/coin_auth/: urls.py
src/coin_base/: constants.py
src/coin_config/: models.py
src/coin_exchange/: __init__.py  admin.py  admin_views.py  apps.py  business.py  constants.py  exceptions.py  factories.py  models.py  resource.py  serializers.py  signals.py  urls.py  views.py  widgets.py
src/coin_exchange/business/: crypto.py  fund.py  notification.py  order.py  promotion.py  (+4 more)
src/coin_system/: __init__.py  admin.py  apps.py  business.py  constants.py  factories.py  models.py  resource.py  serializers.py  tests.py  urls.py  views.py
src/coin_user/: __init__.py  admin.py  apps.py  business.py  constants.py  exceptions.py  factories.py  models.py  resource.py  serializers.py  tests.py  urls.py  views.py
src/common/: business.py  constants.py  decorators.py  exceptions.py  http.py  model_fields.py  provider_data.py  serializer_fields.py
src/conf/: urls.py  wsgi.py
src/content/: admin.py  apps.py  models.py  resource.py  serializers.py  urls.py  views.py
src/integration/: binance.py  bitpay.py  bitstamp.py  coinbase.py  coincap.py  ethereum.py  etherscan.py  exceptions.py  google_storage.py  objects.py  openexchangerates.py  sendgrid.py  slack.py  twilio.py
src/misc_check/: tests.py  urls.py  views.py
src/notification/: __init__.py  admin.py  apps.py  business.py  constants.py  email.py  models.py  slack.py  sms.py  urls.py  views.py
(+124 files in other folders)
