[metadata]
description-file=README.md

# TODO: you are not required to use pytest but extra points if you do
# don't learn it if you don't know it, it takes some time, django test runner is fine
# ANSWER: I used pytest to check flake8 and isort error, just do `pytest`
[tool:pytest]
addopts = -rs --flake8 --durations=10 --reuse-db --tb=short
DJANGO_SETTINGS_MODULE = conf.settings.test
python_files = tests.py test_*.py *_tests.py

[isort]
include_trailing_comma = true
force_sort_within_sections = true
line_length=120
multi_line_output=3
indent='    '
skip = migrations,.git,settings

[flake8]
exclude = .git,*/migrations/*,*/static/*,*node_modules/*,.venv
max-line-length = 120